Falando pouco sobre a  expectativas da area de programação.

--- a/sobreNos.html
+++ b/sobreNos.html
@@ -24,8 +24,10 @@
             <h1>Interesses</h1>
             <div class="posts">
                 <article class="post s1">
-                    <h3>Lorem ipsum dolor sit amet</h3>
-                    <p>David</p>
+                    <h3>David</h3>
+                    <p>Meu interesse na area e os salarios que posso ter de acordo com meu conhecimento e experiencia e
+                        a oportunidades de poder viajar o mundo pois a area de
+                        programação da oportunidade de não só trabalhar no Brasil. </p>
                 </article>
                 <article class="post s1">
                     <h3>Lorem ipsum dolor sit amet</h3>
@@ -45,8 +47,8 @@
             <h1>Influências</h1>
             <div class="posts">
                 <article class="post s2">
-                    <h3>Lorem ipsum dolor sit amet</h3>
-                    <p>David</p>
+                    <h3>David</h3>
+                    <p>Giovanne, Gustavo Guanaba, Fabio akita</p>
                 </article>
                 <article class="post s2">
                     <h3>Lorem ipsum dolor sit amet</h3>
@@ -66,8 +68,10 @@
             <h1>Metas</h1>
             <div class="posts">
                 <article class="post s3">
-                    <h3>Lorem ipsum dolor sit amet</h3>
-                    <p>David</p>
+                    <h3>David</h3>
+                    <p>Minhas metas é finalizar o curso da flit de front and depois focar para virar full stack,
+                        aprender Node.js, TypeScript.ts, React.js, Nest.js,MySQL, MariaDB, SQLITE, redis, mongodb,
+                        postgresql e Docker.</p>
                 </article>
                 <article class="post s3">
                     <h3>Lorem ipsum dolor sit amet</h3>
@@ -87,8 +91,12 @@
             <h1>Necessidades e expectativas</h1>
             <div class="posts">
                 <article class="post s4">
-                    <h3>Lorem ipsum dolor sit amet</h3>
-                    <p>David</p>
+                    <h3>David</h3>
+                    <p>Minha necessidade é aprender mais sobre javaScript, treinar mais a Logica, Node.js,
+                        TypeScript.ts, React.js, Nest.js,MySQL, MariaDB, SQLITE, redis, mongodb,
+                        postgresql e Docker, quando eu trilar essa caminho de aprendisado acredito que estarei
+                        capacitado e minha expectativas e poder terminar o curso sendo um junior bem capacitado e
+                        consegir meu primeiro trabalho na area e por trabalhar de casa se possivel. </p>
                 </article>
                 <article class="post s4">
                     <h3>Lorem ipsum dolor sit amet</h3>
@@ -108,8 +116,9 @@
             <h1>Motivações</h1>
             <div class="posts">
                 <article class="post s5">
-                    <h3>Lorem ipsum dolor sit amet</h3>
-                    <p>David</p>
+                    <h3>David</h3>
+                    <p>Minha motivação a prosseguir na area e minha familia quero dar uma vida melhor para minha esposa
+                        e filho.</p>
                 </article>
                 <article class="post s5">
                     <h3>Lorem ipsum dolor sit amet</h3>
@@ -129,8 +138,10 @@
             <h1>Dores e Frustrações</h1>
             <div class="posts">
                 <article class="post s6">
-                    <h3>Lorem ipsum dolor sit amet</h3>
-                    <p>David</p>
+                    <h3>David</h3>
+                    <p>Minha dor e não ter tanto tempo para me dedicar aos estudas por conta da minha rotina de
+                        trabalho e isso trás uma frustação também por conta que gosto de mais da area de programação e
+                        queria poder dedicar mais tempo.</p>
                 </article>
                 <article class="post s6">
                     <h3>Lorem ipsum dolor sit amet</h3>
