Implementando a função js no botão editar

--- a/participantes/marcos/marcos.html
+++ b/participantes/marcos/marcos.html
@@ -104,24 +104,23 @@
         </section>
 
         <section class="grid-item item3">
-            <div class="description">
+            <div id="bio" class="description">
                 <p>
                 <h2 class="Name">Seja bem-vindo!</h2>
                 </p>
-                <p>
+                <p id="text">
                 <h4 class="curiosities">Prazer, eu sou o Marcos, atualmente a minha rotina hoje é trabalhar e estudar na
-                    Flit,
-                    tenho como hobbies sair com a família, jogar um futebol, fazer musculação ou qualquer outra
-                    atividade fisíca.
-                    Gosto de ouvir uma boa música, seja pagode, sertanejo, hip-hop, eletrônica ou até mesmo uns black
-                    antigão. Meu maior objetivo
-                    hoje é trabalhar na área de tecnologia, ter uma carreira sólida e porque não morar a 500 metros da
+                    Flit, tenho como hobbies sair com a família, jogar um futebol, fazer musculação ou qualquer outra
+                    atividade fisíca. Gosto de ouvir uma boa música, seja pagode, sertanejo, hip-hop, eletrônica ou até
+                    mesmo uns black
+                    antigão. Meu maior objetivo hoje é trabalhar na área de tecnologia, ter uma carreira sólida e porque
+                    não morar a 500 metros da
                     praia?!</h4>
                 </p>
-                <div class="buttons">
+                <div id="btn" class="buttons">
                     <a href="../../participantes/jonatan/jonatan.html" class="back button">Anterior</a>
                     <a href="../../participantes/ruan/ruan.html" class="next button">Próximo</a>
-                    <a class="edit button">Editar</a>
+                    <a id="edit" class="button">Editar</a>
                 </div>
 
             </div>
